fix pie chart truncation with radius="40"

--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@
 
 .pie-chart-container {
   width: 300px;
-  height: 100px;
+  height: 125px;
 }
 
 #specs-display {
